--- a/src/style.css
+++ b/src/style.css
@@ -50,6 +50,33 @@ body {
     margin-right: 0.5rem;
 }
 
-.icon {
-    height: 2rem;
+.walletContainer {
+    width: 50%;
+    background: rgb(236, 236, 236);
+    background: linear-gradient(0deg, rgba(236, 236, 236, 1) 0%, rgba(255, 255, 255, 1) 35%, rgba(254, 254, 254, 1) 65%, rgba(236, 236, 236, 1) 100%);
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-radius: 2rem;
+    align-items: center;
+    margin: auto;
+    margin-top: 5%;
+}
+
+.walletContent {
+    text-align: center;
+    line-height: 50px;
+}
+
+.WalletFont1 {
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.WalletFont2 {
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.connectWallet {
+    border-radius: 10px;
 }
