--- a/src/style.css
+++ b/src/style.css
@@ -80,3 +80,15 @@ body {
 .connectWallet {
     border-radius: 10px;
 }
+
+.homePage {
+    margin: 3rem;
+}
+
+.homePageFont1 {
+    font-size: 20px;
+    font-weight: bold;
+    color: black;
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
