--- a/src/style.css
+++ b/src/style.css
@@ -93,10 +93,10 @@ body {
     margin-bottom: 0.5rem;
 }
 
-.bottomDivider {
+/* .bottomDivider {
     position: relative;
     top: 10rem;
-}
+} */
 
 .bottomDivider2 {
     position: relative;
