--- a/src/style.css
+++ b/src/style.css
@@ -166,3 +166,19 @@ body {
 .nftImg {
     border-radius: 1rem;
 }
+
+.viewNFTContainer {
+    width: 90%;
+    background: rgb(236, 236, 236);
+    padding: 30px;
+    border-radius: 3rem;
+    margin: auto;
+    margin-top: 3%;
+}
+
+.NFTImg {
+    height: 100%;
+    width: 100%;
+    border-radius: 2rem;
+    margin-bottom: 1rem;
+}
