--- a/src/style.css
+++ b/src/style.css
@@ -171,6 +171,22 @@ body {
     width: 90%;
     background: rgb(236, 236, 236);
     padding: 30px;
+    border-bottom-left-radius: 3rem;
+    border-bottom-right-radius: 3rem;
+    margin: auto;
+}
+
+.viewNFTButtonContainer {
+    width: 90%;
+    background: rgb(236, 236, 236);
+    margin: auto;
+    margin-top: 3%;
+}
+
+.marketplaceContainer {
+    width: 90%;
+    background: rgb(236, 236, 236);
+    padding: 30px;
     border-radius: 3rem;
     margin: auto;
     margin-top: 3%;
